--- a/client/src/Pages/Home/Home.scss
+++ b/client/src/Pages/Home/Home.scss
@@ -1,6 +1,8 @@
 .main{
-    width: 100%;
-    padding: 3% 24%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     &__banner {
         background-image: url('../../images/roles.png');
@@ -8,6 +10,39 @@
         background-repeat: no-repeat;
         border-radius: 10px;
         height: 10rem;
+        width: 28rem;
+        margin: 3rem 0;
         box-shadow: 0 3px 20px rgb(255 255 255/ 0.6);
     }
 }
+
+.btn {
+    background: #ff8c00;
+    background-image: -webkit-linear-gradient(top, #ff8c00, #6d00a3);
+    background-image: -moz-linear-gradient(top, #ff8c00, #6d00a3);
+    background-image: -ms-linear-gradient(top, #ff8c00, #6d00a3);
+    background-image: -o-linear-gradient(top, #ff8c00, #6d00a3);
+    background-image: linear-gradient(to bottom, #ff8c00, #6d00a3);
+    -webkit-border-radius: 30;
+    -moz-border-radius: 30;
+    border-radius: 30px;
+    text-shadow: 3px 0px 23px #ffffff;
+    -webkit-box-shadow: 0px 1px 3px #f5f2f5;
+    -moz-box-shadow: 0px 1px 3px #f5f2f5;
+    box-shadow: 0px 1px 3px #f5f2f5;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 24px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #5400b3;
+    background-image: -webkit-linear-gradient(top, #5400b3, #ff9900);
+    background-image: -moz-linear-gradient(top, #5400b3, #ff9900);
+    background-image: -ms-linear-gradient(top, #5400b3, #ff9900);
+    background-image: -o-linear-gradient(top, #5400b3, #ff9900);
+    background-image: linear-gradient(to bottom, #5400b3, #ff9900);
+    text-decoration: none;
+  }
