--- a/client/src/components/QuizCardAnswers/QuizCardAnswers.scss
+++ b/client/src/components/QuizCardAnswers/QuizCardAnswers.scss
@@ -3,16 +3,25 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        padding: 0;
+        list-style-type: none;
     }
-    &__li {
+    &__input {
+        display: none;
+    }
+
+    &__label {
+        display: block;
+        flex-direction: column;
         justify-content: center;
-        list-style: none;
-        border: 1px solid #000000;
         padding: 1rem;
         margin: .5rem;
         width: 30rem;
+        border-radius: 1rem;
+        background-color: #4a468a;
     }
-}
 
-label {
+    &__input:checked + &__label {
+        background-color: #f0b358;
+    }
 }
