--- a/client/src/components/QuizCardAnswers/QuizCardAnswers.scss
+++ b/client/src/components/QuizCardAnswers/QuizCardAnswers.scss
@@ -18,10 +18,21 @@
         margin: .5rem;
         width: 30rem;
         border-radius: 1rem;
-        background-color: #4a468a;
+background: #9F3CDE;
+background: -moz-linear-gradient(top, #9F3CDE 0%, #5331A8 65%, #2F1A7A 100%);
+background: -webkit-linear-gradient(top, #9F3CDE 0%, #5331A8 65%, #2F1A7A 100%);
+background: linear-gradient(to bottom, #9F3CDE 0%, #5331A8 65%, #2F1A7A 100%);
+        box-shadow: 2px 9px 15px 0px rgba(53,53,53,0.8);
+        color: #fff;
+        font-weight: bold;
+        font-size: 1.25rem;
     }
 
     &__input:checked + &__label {
-        background-color: #f0b358;
+background: #D9B123;
+background: -moz-linear-gradient(top, #D9B123 0%, #D97A2B 65%, #8C420D 100%);
+background: -webkit-linear-gradient(top, #D9B123 0%, #D97A2B 65%, #8C420D 100%);
+background: linear-gradient(to bottom, #D9B123 0%, #D97A2B 65%, #8C420D 100%);
+        color: #111;
     }
 }
